--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^4.12.1",
-    "mongoose": "^6.7.5"
+    "mongoose": "^6.7.5",
+    "mongoose-field-encryption": "5.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
